# pact-supply-tracker

./: .gitignore  .gitmodules  .vsconfig  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  resources.rc
include/: pact_supply_data.hpp  resource.h  shared.hpp
src/: addon.cpp
